Fix authentication issue - allow web browser access without Bearer token

--- a/static/index.html
+++ b/static/index.html
@@ -444,8 +444,7 @@
                 const response = await fetch('/hackrx/run', {
                     method: 'POST',
                     headers: {
-                        'Content-Type': 'application/json',
-                        'Authorization': 'Bearer your-secure-bearer-token-here'
+                        'Content-Type': 'application/json'
                     },
                     body: JSON.stringify(requestData)
                 });
